--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,10 @@ html.dark {
   background: #121212;
 }
 
+a {
+  text-decoration: none;
+}
+
 // Visible only to screen readers
 .hidden-visually {
   position: absolute;
