--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import './variables.scss', './typography.scss', './animations.scss';
+
 html,
 body,
 #app {
@@ -14,12 +16,8 @@ body,
   margin: 0;
 }
 
-html.dark {
-  background: #121212;
-}
-
-a {
-  text-decoration: none;
+body {
+  background-color: var(--bg);
 }
 
 // Visible only to screen readers
