--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -11,6 +11,8 @@ h3,
 h4,
 h5,
 h6,
+th,
+td,
 li,
 p {
   overflow-wrap: break-word;
@@ -42,4 +44,41 @@ h1, .h1 {
 h2, .h2 {
   line-height: 28px;
   font-size: var(--font-size-5);
+}
+
+ul, li {
+  padding: 0;
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+table {
+  width: 100%;
+}
+
+tr {
+  align-items: center;
+  display: table-row;
+  border-top: 1px solid var(--border);
+
+  &:last-of-type {
+    border-bottom: 1px solid var(--border);
+  }
+
+  &:nth-child(odd) {
+    background-color: var(--bg-soft-mute);
+  }
+}
+
+th {
+  padding: 8px 16px;
+  font-weight: var(--font-weight-6);
+  font-size: var(--font-size-3);
+}
+
+td {
+  padding: 8px 8px;
 }
