--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -90,6 +90,7 @@
 
   @media (prefers-color-scheme: dark) {
     --bg: #1e1e20;
+    --bg-soft-mute: #535362;
     --header-bg: #161b22;
 
     --border: rgba(82, 82, 89, .68);
