Add no results section if no data is available to display

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './variables.scss', './typography.scss', './animations.scss';
+@import './variables.scss', './typography.scss';
 
 html,
 body,
