--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -44,6 +44,11 @@ h2, .h2 {
   font-size: var(--font-size-5);
 }
 
+h3, .h3 {
+  line-height: 20px;
+  font-size: var(--font-size-4);
+}
+
 ul, li {
   padding: 0;
   margin: 0;
